--- a/ChachaT/Base.lproj/PopUp.storyboard
+++ b/ChachaT/Base.lproj/PopUp.storyboard
@@ -206,14 +206,14 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dYL-Ek-CAM" userLabel="BackgroundColorOverlay">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="672"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="338"/>
                                         <subviews>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Your interesting answer..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hNg-E2-IW9" customClass="MBAutoGrowingTextView">
-                                                <rect key="frame" x="20" y="138" width="335" height="366"/>
+                                                <rect key="frame" x="20" y="128" width="335" height="200"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="366" id="9qO-SN-e79"/>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="366" id="faP-eh-vF1"/>
+                                                    <constraint firstAttribute="height" constant="200" id="9qO-SN-e79"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="faP-eh-vF1"/>
                                                 </constraints>
                                                 <color key="textColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
@@ -223,7 +223,7 @@
                                                 </connections>
                                             </textView>
                                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="teS-4f-g9g">
-                                                <rect key="frame" x="173" y="306" width="30" height="30"/>
+                                                <rect key="frame" x="173" y="213" width="30" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="30" id="bMv-6j-jCf"/>
                                                     <constraint firstAttribute="height" constant="30" id="hni-QD-Ucf"/>
@@ -231,7 +231,7 @@
                                                 <color key="color" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
                                             </activityIndicatorView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uO6-LA-19D">
-                                                <rect key="frame" x="20" y="20" width="74" height="21"/>
+                                                <rect key="frame" x="20" y="10" width="74" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="21" id="Gfs-dr-Ec3"/>
                                                     <constraint firstAttribute="width" constant="74" id="wIm-Da-hiL"/>
@@ -241,7 +241,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Answer:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LmZ-DP-7YP">
-                                                <rect key="frame" x="20" y="109" width="101" height="21"/>
+                                                <rect key="frame" x="20" y="99" width="101" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="74" id="AP9-Yd-BMP"/>
                                                     <constraint firstAttribute="height" constant="21" id="uSp-gf-xrR"/>
@@ -257,7 +257,7 @@
                                                 </variation>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Write a question that others would like to know about you..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ils-DD-YlI" customClass="MBAutoGrowingTextView">
-                                                <rect key="frame" x="20" y="49" width="335" height="50"/>
+                                                <rect key="frame" x="20" y="39" width="335" height="50"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="1Ca-K7-Q9d"/>
@@ -271,7 +271,6 @@
                                                 </connections>
                                             </textView>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="0.29500105574324326" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="teS-4f-g9g" firstAttribute="centerX" secondItem="dYL-Ek-CAM" secondAttribute="centerX" id="1Om-L3-4fP"/>
                                             <constraint firstItem="teS-4f-g9g" firstAttribute="centerY" secondItem="dYL-Ek-CAM" secondAttribute="centerY" id="8Xi-9D-KuW"/>
@@ -282,13 +281,13 @@
                                             <constraint firstItem="uO6-LA-19D" firstAttribute="leading" secondItem="ils-DD-YlI" secondAttribute="leading" id="LYr-mt-Lqz"/>
                                             <constraint firstItem="teS-4f-g9g" firstAttribute="centerY" secondItem="hNg-E2-IW9" secondAttribute="centerY" id="MYJ-Xp-iQV"/>
                                             <constraint firstItem="ils-DD-YlI" firstAttribute="leading" secondItem="dYL-Ek-CAM" secondAttribute="leading" constant="20" id="Q9Y-py-Rc9"/>
-                                            <constraint firstItem="uO6-LA-19D" firstAttribute="top" secondItem="dYL-Ek-CAM" secondAttribute="top" constant="20" id="RfT-1Q-Q4g"/>
+                                            <constraint firstItem="uO6-LA-19D" firstAttribute="top" secondItem="dYL-Ek-CAM" secondAttribute="top" constant="10" id="RfT-1Q-Q4g"/>
                                             <constraint firstItem="hNg-E2-IW9" firstAttribute="trailing" secondItem="ils-DD-YlI" secondAttribute="trailing" id="gyR-jC-Ope"/>
                                             <constraint firstItem="teS-4f-g9g" firstAttribute="centerX" secondItem="hNg-E2-IW9" secondAttribute="centerX" id="idi-kT-Qe1"/>
+                                            <constraint firstAttribute="bottom" secondItem="hNg-E2-IW9" secondAttribute="bottom" constant="10" id="ihm-Zf-4Uw"/>
                                             <constraint firstItem="hNg-E2-IW9" firstAttribute="top" secondItem="LmZ-DP-7YP" secondAttribute="bottom" constant="8" id="kPk-QL-XvF"/>
                                             <constraint firstItem="ils-DD-YlI" firstAttribute="top" secondItem="dYL-Ek-CAM" secondAttribute="top" constant="8" id="twQ-ww-EEO"/>
                                             <constraint firstItem="hNg-E2-IW9" firstAttribute="leading" secondItem="ils-DD-YlI" secondAttribute="leading" id="y6G-vc-465"/>
-                                            <constraint firstAttribute="bottom" secondItem="hNg-E2-IW9" secondAttribute="bottom" constant="168" id="yFo-cx-acv"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
@@ -299,6 +298,7 @@
                                         </variation>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="0.29500105570000001" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="dYL-Ek-CAM" firstAttribute="top" secondItem="fbs-Sd-CFR" secondAttribute="top" id="42x-bv-VF2"/>
                                     <constraint firstAttribute="trailing" secondItem="dYL-Ek-CAM" secondAttribute="trailing" id="Rfh-Mz-SSu"/>
